objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Notes__c</fullName>
        <label>Activity Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_In__c</fullName>
        <description>This field will populate with a date/time stamp when the user &quot;Checks In&quot; to an activity</description>
        <label>Check In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_Out__c</fullName>
        <description>This field will populate with a date/time stamp when the user &quot;Checks In&quot; to an activity for the second time</description>
        <label>Check Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Confirmation</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Pending Visit</fullName>
                </value>
                <value>
                    <fullName>On Site Completed</fullName>
                </value>
                <value>
                    <fullName>Follow to be planned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterviewID__c</fullName>
        <label>InterviewID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRecurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Meeting_Objective__c</fullName>
        <label>Key Meeting Objective</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objectivve_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Objective Met?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SeriesAccess__c</fullName>
        <formula>IF ( IsRecurring__c , IMAGE(&quot;/img/recurring_activity.gif&quot;, &quot;Recurring&quot;) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b460000011yk8&amp;eid=&quot;&amp; TaskRecurrenceId__c , &quot;Delete Series&quot;,&quot;_top&quot;) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b460000011yk9&amp;eid=&quot;&amp; TaskRecurrenceId__c , &quot;Change Series Owner&quot;,&quot;_top&quot;), &quot;Individual Task&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Series</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SparkID__c</fullName>
        <label>SparkID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskRecurrenceId__c</fullName>
        <externalId>true</externalId>
        <label>TaskRecurrenceId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskSeriesDescribe__c</fullName>
        <label>Series Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskTemplateId__c</fullName>
        <description>Lookup link to Task Template</description>
        <label>Task Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>